# aoc

./: .gitignore
advent/: pyproject.toml
advent/day1/: day1.py
advent/day10/: day10.lua
advent/day11/: day11.py
advent/day12/: day12.py
advent/day13/: day13.py
advent/day14/: day14.py
advent/day15/src/: main.rs
advent/day16/: Cargo.toml
advent/day16/src/: main.rs  printgrid.rs  read_file.rs  test.rs
advent/day17/: day17.py  freshstart.py  grid.py  node.py  test.py
advent/day18/: day18.py  part2.py
advent/day19/: day19.py
advent/day2/: day2.py
advent/day20/: day20.py
advent/day4/: Cargo.toml
advent/day4/src/: main.rs
advent/day5/src/: main.rs
advent/day6/: day6.py
advent/day7/: day7.py
advent/day8/: day8.py
advent/day9/: day9.py
advent22/day1/src/: main.rs
advent22/day2/: Cargo.toml
advent22/day2/src/: main.rs
advent22/day3/: Cargo.toml  README.md
advent22/day3/src/: main.rs
advent24/day1/src/: main.rs
advent24/day10/src/: main.rs
advent24/day2/: Cargo.toml
advent24/day2/src/: main.rs  second.rs
advent24/day3/: Cargo.toml
advent24/day3/src/: main.rs
advent24/day4/: Cargo.toml
advent24/day4/src/: main.rs
advent24/day5/: Cargo.toml
advent24/day5/src/: main.rs
advent24/day6/: Cargo.toml
advent24/day6/src/: main.rs  main.rs.bck
advent24/day7/: Cargo.toml
advent24/day7/src/: main.rs
advent24/day8/: Cargo.toml
advent24/day8/src/: main.rs
advent24/day9/: Cargo.toml
advent24/day9/src/: main.rs
